<resources>
    <string name="app_name">ChattingAppsBagas</string>
    <string name="username">Type Your Username</string>
    <string name="email">Type Your Email</string>
    <string name="password">Type Your Password</string>
    <string name="confirm_password">Retype Your Password</string>

    <string name="btnSignUp">Sign Up</string>
    <string name="btnSignIn">Sign In</string>
    <string name="ReadyRegister">Already Registered, Sign In!</string>
    <string name="NotRegister">Not Registered Yet, Sign Up!</string>
    <string name="Edit_Profile">Edit Profile</string>
    <string name="Logout">Logout</string>
    <string name="Create_Group">Create Group</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="label_profile">Edit Profile</string>
    <string name="btn_save">Save</string>
    <string name="type_message">Type Message</string>
</resources>
